--- a/metadata.yaml
+++ b/metadata.yaml
@@ -29,6 +29,7 @@ subjects:
 - !lcsh 'Chinese -- Juvenile fiction'
 - !lcsh 'Fishing -- Juvenile fiction'
 - !lcsh 'Mystery and detective stories'
+- GITenberg
 title: 'The Shadow Passes
 
   A Mystery Story for Boys'
